fix(shs-5653): add missing vertical spacing in mobile grid (#1549)

--- a/docroot/themes/humsci/humsci_basic/src/scss/components/_pattern.grid.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/components/_pattern.grid.scss
@@ -26,4 +26,12 @@
       }
     }
   }
+
+  &__item {
+    margin-bottom: calc(#{hb-spacing-width('default', false)} / 2);
+
+    @include grid-media-min('sm') {
+      margin-bottom: 0;
+    }
+  }
 }
